# adicup3029-blinky

./: .gitignore  CMakeLists.txt  README.md  aducm3029.cmake
.github/workflows/: ci-test.yml
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/: RTX5.scvd
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/Examples/MemPool/: Abstract.txt  MemPool.uvoptx  MemPool.uvprojx
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/Include/: rtx_evr.h
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/Source/: rtx_core_ca.h  rtx_delay.c  rtx_evflags.c  rtx_evr.c  rtx_kernel.c  rtx_lib.c  rtx_msgqueue.c  rtx_mutex.c  rtx_system.c  rtx_thread.c  rtx_timer.c
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/Source/ARM/: irq_ca.s
ARM.CMSIS.5.4.0/CMSIS/RTOS2/RTX/Source/GCC/: irq_ca.S
ARM.CMSIS.5.4.0/CMSIS/Utilities/: PACK.xsd  PackIndex.xsd
ARM.CMSIS.5.4.0/Device/ARM/ARMCA5/Source/: mmu_ARMCA5.c  system_ARMCA5.c
ARM.CMSIS.5.4.0/Device/ARM/ARMCA7/Source/: mmu_ARMCA7.c  system_ARMCA7.c
ARM.CMSIS.5.4.0/Device/ARM/ARMCA9/Source/: mmu_ARMCA9.c  system_ARMCA9.c
AnalogDevices.ADuCM302x_DFP.3.2.0/Source/GCC/: ADuCM3029.ld
AnalogDevices.EVAL-ADICUP3029_BSP.1.1.0/: examples.xml
AnalogDevices.EVAL-ADICUP3029_BSP.1.1.0/License/: IoT_Node_Android_Terms_of_Use 22May2017.docx  IoT_Node_Android_Terms_of_Use 22May2017.txt  license.txt
AnalogDevices.EVAL-ADICUP3029_BSP.1.1.0/Tools/ble/programmer/: Readme_Programmer.txt  programmer.c
AnalogDevices.EVAL-ADICUP3029_BSP.1.1.0/Tools/ble/programmer/EVAL-ADICUP3029/: change_mac_45.hex  change_mac_46.hex  change_mac_47.hex  change_mac_48.hex  change_mac_49.hex  programmer.hex
(+248 files in other folders)
